# easy_git

./: .gitignore  CLAUDE.md  LICENSE  README.md  pubspec.yaml
.cargo/: config.toml
android/app/: build.gradle.kts
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  SECURITY.md
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/router/: app_router.dart
lib/core/storage/: app_storage.dart  storage_provider.dart
lib/core/theme/: app_theme.dart
lib/src/rust/: frb_generated.dart  (+2 more)
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml  build.rs
rust/examples/: test_pull.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: git.rs  mod.rs
rust/src/error/: mod.rs
rust/src/git/: mod.rs  repository.rs
rust/src/models/: branch.rs  commit.rs  diff.rs  mod.rs  repository.rs  status.rs
rust/src/scanner/: discover.rs  mod.rs
rust/src/utils/: mod.rs  path.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_easy_git.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_easy_git.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
test/providers/: repositories_provider_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+15 files in other folders)
