[package]
name = "rust_lib_easy_git"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
git2 = { version = "0.20", default-features = false, features = ["vendored-openssl", "vendored-libgit2", "ssh", "https"] }
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
parking_lot = "0.12"
rayon = "1.11"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
